--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -75,6 +75,10 @@ body {
     &__link {
         font-weight: 500;
         color: #000;
+
+        &:hover {
+            text-decoration: underline;
+        }
     }
 }
 
