--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,6 +1,10 @@
 @import "nullstyle";
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap');
 
+html, body {
+    height: 100%;
+}
+
 body {
     font-family: 'Montserrat', sans-serif;
     font-size: 14px;
