--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -23,16 +23,53 @@ body {
     max-width: 1180px;
     margin: 0 auto;
     padding: 0 15px;
+    box-sizing: content-box;
 }
 
 /* ---------------------------------- header ---------------------------------- */
 
 .header {
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
+    z-index: 50;
+
+    &::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: #999;
+        z-index: 2;
+    }
+
     &__body {
         display: flex;
         justify-content: space-between;
         min-height: 110px;
         align-items: center;
+        position: relative;
+    }
+
+    &__logo {
+        position: relative;
+        z-index: 3;
+    }
+
+    &__burger {
+        display: none;
+    }
+
+    &__info {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    &__menu {
+        margin-right: 68px;
     }
 }
 
@@ -40,6 +77,7 @@ body {
     &__list {
         display: flex;
         position: relative;
+        z-index: 2;
     }
 
     &__item {
@@ -76,6 +114,7 @@ body {
     &__list {
         display: flex;
         position: relative;
+        z-index: 2;
     }
 
     &__item {
@@ -145,8 +184,61 @@ body {
     }
 }
 
+/* ---------------------------------- @media header ---------------------------------- */
+
+@media (max-width: 1230px) {
+    .header {
+        &__burger {
+            display: block;
+            position: relative;
+            width: 30px;
+            height: 20px;
+            z-index: 3;
+
+            span {
+                background: #000;
+                position: absolute;
+                left: 0;
+                width: 100%;
+                height: 2px;
+                top: 9px;
+            }
+
+            &::before, &::after {
+                content: '';
+                background: #000;
+                position: absolute;
+                width: 100%;
+                height: 2px;
+                left: 0;
+            }
+
+            &::before {
+                top: 0;
+            }
+
+            &::after {
+                bottom: 0;
+            }
+        }
+
+        &__info {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: antiquewhite;
+            padding-top: 150px;
+        }
+    }
+}
+
 /* ---------------------------------- main ---------------------------------- */
 
+.main {
+    padding-top: 130px;
+}
 
 /* ---------------------------------- footer ---------------------------------- */
 
