--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -69,7 +69,7 @@ body {
     }
 
     &__menu {
-        margin-right: 68px;
+        margin: 0 68px 0 0;
     }
 }
 
@@ -82,7 +82,7 @@ body {
 
     &__item {
         &:not(:last-child) {
-            margin-right: 40px;
+            margin: 0 40px 0 0;
         }
 
         &:nth-child(1)::before {
@@ -96,7 +96,7 @@ body {
         }
 
         &:nth-child(1) .menu__link {
-            padding-left: 28px;
+            padding: 0 0 0 28px;
         }
     }
 
@@ -119,11 +119,11 @@ body {
 
     &__item {
         &:not(:last-child) {
-            margin-right: 40px;
+            margin: 0 40px 0 0;
         }
 
         &:nth-child(1) {
-            margin-right: 52px;
+            margin: 0 52px 0 0;
         }
 
         &:nth-child(1)::before {
@@ -161,7 +161,7 @@ body {
         }
 
         &:nth-child(3) .contacts__link {
-            padding-left: 26px;
+            padding: 0 0 0 26px;
         }
     }
 
@@ -188,6 +188,16 @@ body {
 
 @media (max-width: 1230px) {
     .header {
+        &__body {
+            min-height: 80px;
+        }
+
+        &__logo {
+            img {
+                height: 60px;
+            }
+        }
+
         &__burger {
             display: block;
             position: relative;
@@ -229,7 +239,41 @@ body {
             width: 100%;
             height: 100%;
             background: antiquewhite;
-            padding-top: 150px;
+            padding: 120px 15px 15px 15px;
+            flex-direction: column;
+            justify-content: flex-start;
+        }
+
+        &__menu {
+            order: 2;
+            margin: 30px 0 0 0;
+        }
+
+        &__contacts {
+            order: 1;
+        }
+    }
+    .menu {
+        &__list {
+            display: block;
+        }
+
+        &__item {
+            &:not(:last-child) {
+                margin: 0 0 20px 0;
+            }
+
+            &:nth-child(1)::before {
+                background: none;
+            }
+
+            &:nth-child(1) .menu__link {
+                padding: 0;
+            }
+        }
+
+        &__link {
+            font-size: 20px;
         }
     }
 }
@@ -237,7 +281,7 @@ body {
 /* ---------------------------------- main ---------------------------------- */
 
 .main {
-    padding-top: 130px;
+    padding: 130px 0 0 0;
 }
 
 /* ---------------------------------- footer ---------------------------------- */
