--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -187,6 +187,9 @@ body {
 /* ---------------------------------- @media header ---------------------------------- */
 
 @media (max-width: 1230px) {
+    body.lock {
+        overflow: hidden;
+    }
     .header {
         &__body {
             min-height: 80px;
@@ -212,6 +215,7 @@ body {
                 width: 100%;
                 height: 2px;
                 top: 9px;
+                transition: all .3s ease 0s;
             }
 
             &::before, &::after {
@@ -221,6 +225,7 @@ body {
                 width: 100%;
                 height: 2px;
                 left: 0;
+                transition: all .3s ease 0s;
             }
 
             &::before {
@@ -230,11 +235,25 @@ body {
             &::after {
                 bottom: 0;
             }
+
+            &.active span {
+                transform: scale(0);
+            }
+
+            &.active::before {
+                transform: rotate(45deg);
+                top: 9px;
+            }
+
+            &.active::after {
+                transform: rotate(-45deg);
+                bottom: 9px;
+            }
         }
 
         &__info {
             position: fixed;
-            top: 0;
+            top: -100%;
             left: 0;
             width: 100%;
             height: 100%;
@@ -242,11 +261,17 @@ body {
             padding: 120px 15px 15px 15px;
             flex-direction: column;
             justify-content: flex-start;
+            transition: all .3s ease 0s;
+            overflow: auto;
+
+            &.active {
+                top: 0;
+            }
         }
 
         &__menu {
             order: 2;
-            margin: 30px 0 0 0;
+            margin: 40px 0 0 0;
         }
 
         &__contacts {
@@ -260,7 +285,7 @@ body {
 
         &__item {
             &:not(:last-child) {
-                margin: 0 0 20px 0;
+                margin: 0 0 30px 0;
             }
 
             &:nth-child(1)::before {
@@ -273,7 +298,32 @@ body {
         }
 
         &__link {
-            font-size: 20px;
+            font-size: 21px;
+        }
+    }
+    .contacts {
+        &__item {
+            &:nth-child(1)::before {
+                width: 18px;
+                height: 21px;
+                top: -2px;
+            }
+
+            &:nth-child(1)::after {
+                width: 13px;
+                height: 13px;
+                top: 6px;
+            }
+
+            &:nth-child(3)::before {
+                width: 18px;
+                height: 19px;
+                top: 0;
+            }
+        }
+
+        &__link {
+            font-size: 18px;
         }
     }
 }
@@ -282,6 +332,14 @@ body {
 
 .main {
     padding: 130px 0 0 0;
+}
+
+/* ---------------------------------- @media main ---------------------------------- */
+
+@media (max-width: 1230px) {
+    .main {
+        padding: 100px 0 0 0;
+    }
 }
 
 /* ---------------------------------- footer ---------------------------------- */
