--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,4 +1,5 @@
 @import "nullstyle";
+@import "header";
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap');
 
 html, body {
@@ -24,308 +25,6 @@ body {
     margin: 0 auto;
     padding: 0 15px;
     box-sizing: content-box;
-}
-
-/* ---------------------------------- header ---------------------------------- */
-
-.header {
-    position: fixed;
-    width: 100%;
-    top: 0;
-    left: 0;
-    z-index: 50;
-
-    &::before {
-        content: '';
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background: #999;
-        z-index: 2;
-    }
-
-    &__body {
-        display: flex;
-        justify-content: space-between;
-        min-height: 110px;
-        align-items: center;
-        position: relative;
-    }
-
-    &__logo {
-        position: relative;
-        z-index: 3;
-    }
-
-    &__burger {
-        display: none;
-    }
-
-    &__info {
-        display: flex;
-        justify-content: space-between;
-    }
-
-    &__menu {
-        margin: 0 68px 0 0;
-    }
-}
-
-.menu {
-    &__list {
-        display: flex;
-        position: relative;
-        z-index: 2;
-    }
-
-    &__item {
-        &:not(:last-child) {
-            margin: 0 40px 0 0;
-        }
-
-        &:nth-child(1)::before {
-            content: '';
-            background: url("../img/header/all-courses.svg") 0 0 no-repeat;
-            display: inline-block;
-            width: 20px;
-            height: 16px;
-            position: absolute;
-            top: -1px;
-        }
-
-        &:nth-child(1) .menu__link {
-            padding: 0 0 0 28px;
-        }
-    }
-
-    &__link {
-        font-weight: 500;
-        color: #000;
-
-        &:hover {
-            text-decoration: underline;
-        }
-    }
-}
-
-.contacts {
-    &__list {
-        display: flex;
-        position: relative;
-        z-index: 2;
-    }
-
-    &__item {
-        &:not(:last-child) {
-            margin: 0 40px 0 0;
-        }
-
-        &:nth-child(1) {
-            margin: 0 52px 0 0;
-        }
-
-        &:nth-child(1)::before {
-            content: '';
-            background: url("../img/header/geo.svg") 0 0 no-repeat;
-            display: inline-block;
-            width: 17px;
-            height: 20px;
-            position: absolute;
-            top: -3px;
-        }
-
-        &:nth-child(1)::after {
-            content: '';
-            background: url("../img/header/arrow-bottom.svg") 0 0 no-repeat;
-            display: inline-block;
-            width: 12px;
-            height: 12px;
-            position: absolute;
-            top: 4px;
-        }
-
-        &:nth-child(3)::before {
-            content: '';
-            background: url("../img/header/login.svg") 0 0 no-repeat;
-            display: inline-block;
-            width: 17px;
-            height: 18px;
-            position: absolute;
-            top: -2px;
-        }
-
-        &:nth-child(1) .contacts__link {
-            padding: 0 10px 0 26px;
-        }
-
-        &:nth-child(3) .contacts__link {
-            padding: 0 0 0 26px;
-        }
-    }
-
-    &__link {
-        font-weight: 500;
-        color: #000;
-
-        &--location {
-            text-decoration: underline;
-        }
-
-        &--location:hover {
-            text-decoration: none;
-        }
-
-        &--phone {
-            font-size: 16px;
-            color: #00093c;
-        }
-    }
-}
-
-/* ---------------------------------- @media header ---------------------------------- */
-
-@media (max-width: 1230px) {
-    body.lock {
-        overflow: hidden;
-    }
-    .header {
-        &__body {
-            min-height: 80px;
-        }
-
-        &__logo {
-            img {
-                height: 60px;
-            }
-        }
-
-        &__burger {
-            display: block;
-            position: relative;
-            width: 30px;
-            height: 20px;
-            z-index: 3;
-
-            span {
-                background: #000;
-                position: absolute;
-                left: 0;
-                width: 100%;
-                height: 2px;
-                top: 9px;
-                transition: all .3s ease 0s;
-            }
-
-            &::before, &::after {
-                content: '';
-                background: #000;
-                position: absolute;
-                width: 100%;
-                height: 2px;
-                left: 0;
-                transition: all .3s ease 0s;
-            }
-
-            &::before {
-                top: 0;
-            }
-
-            &::after {
-                bottom: 0;
-            }
-
-            &.active span {
-                transform: scale(0);
-            }
-
-            &.active::before {
-                transform: rotate(45deg);
-                top: 9px;
-            }
-
-            &.active::after {
-                transform: rotate(-45deg);
-                bottom: 9px;
-            }
-        }
-
-        &__info {
-            position: fixed;
-            top: -100%;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: antiquewhite;
-            padding: 120px 15px 15px 15px;
-            flex-direction: column;
-            justify-content: flex-start;
-            transition: all .3s ease 0s;
-            overflow: auto;
-
-            &.active {
-                top: 0;
-            }
-        }
-
-        &__menu {
-            order: 2;
-            margin: 40px 0 0 0;
-        }
-
-        &__contacts {
-            order: 1;
-        }
-    }
-    .menu {
-        &__list {
-            display: block;
-        }
-
-        &__item {
-            &:not(:last-child) {
-                margin: 0 0 30px 0;
-            }
-
-            &:nth-child(1)::before {
-                background: none;
-            }
-
-            &:nth-child(1) .menu__link {
-                padding: 0;
-            }
-        }
-
-        &__link {
-            font-size: 21px;
-        }
-    }
-    .contacts {
-        &__item {
-            &:nth-child(1)::before {
-                width: 18px;
-                height: 21px;
-                top: -2px;
-            }
-
-            &:nth-child(1)::after {
-                width: 13px;
-                height: 13px;
-                top: 6px;
-            }
-
-            &:nth-child(3)::before {
-                width: 18px;
-                height: 19px;
-                top: 0;
-            }
-        }
-
-        &__link {
-            font-size: 18px;
-        }
-    }
 }
 
 /* ---------------------------------- main ---------------------------------- */
