--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -12,7 +12,7 @@
         left: 0;
         width: 100%;
         height: 100%;
-        background: #999;
+        background: #fff;
         z-index: 2;
     }
 
@@ -27,6 +27,9 @@
     &__logo {
         position: relative;
         z-index: 3;
+        background: url("../img/header/logo-dark.svg") 0 0 no-repeat;
+        width: 100px;
+        height: 70.65px;
     }
 
     &__burger {
@@ -161,14 +164,18 @@
         overflow: hidden;
     }
     .header {
+        &::before {
+            background: #00093c;
+        }
+
         &__body {
-            min-height: 80px;
+            min-height: 60px;
         }
 
         &__logo {
-            img {
-                height: 60px;
-            }
+            background: url("../img/header/logo-light.svg") 0 0 no-repeat;
+            width: 57px;
+            height: 40.27px;
         }
 
         &__burger {
@@ -179,7 +186,7 @@
             z-index: 3;
 
             span {
-                background: #000;
+                background: #fff;
                 position: absolute;
                 left: 0;
                 width: 100%;
@@ -190,7 +197,7 @@
 
             &::before, &::after {
                 content: '';
-                background: #000;
+                background: #fff;
                 position: absolute;
                 width: 100%;
                 height: 2px;
@@ -227,7 +234,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: antiquewhite;
+            background: #fff;
             padding: 120px 15px 15px 15px;
             flex-direction: column;
             justify-content: flex-start;
