--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -31,13 +31,15 @@ body {
 
 .main {
     padding: 130px 0 0 0;
+    background: #00093c;
+    color: #fff;
 }
 
 /* ---------------------------------- @media main ---------------------------------- */
 
 @media (max-width: 1230px) {
     .main {
-        padding: 100px 0 0 0;
+        padding: 80px 0 0 0;
     }
 }
 
