--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -228,6 +228,10 @@
             }
         }
 
+        &__menu {
+            margin: 0 0 30px 0;
+        }
+
         &__info {
             position: fixed;
             top: -100%;
@@ -235,7 +239,7 @@
             width: 100%;
             height: 100%;
             background: #fff;
-            padding: 120px 15px 15px 15px;
+            padding: 90px 15px 15px 15px;
             flex-direction: column;
             justify-content: flex-start;
             transition: all .3s ease 0s;
@@ -244,15 +248,6 @@
             &.active {
                 top: 0;
             }
-        }
-
-        &__menu {
-            order: 2;
-            margin: 40px 0 0 0;
-        }
-
-        &__contacts {
-            order: 1;
         }
     }
     .menu {
@@ -264,43 +259,6 @@
             &:not(:last-child) {
                 margin: 0 0 30px 0;
             }
-
-            &:nth-child(1)::before {
-                background: none;
-            }
-
-            &:nth-child(1) .menu__link {
-                padding: 0;
-            }
-        }
-
-        &__link {
-            font-size: 21px;
-        }
-    }
-    .contacts {
-        &__item {
-            &:nth-child(1)::before {
-                width: 18px;
-                height: 21px;
-                top: -2px;
-            }
-
-            &:nth-child(1)::after {
-                width: 13px;
-                height: 13px;
-                top: 6px;
-            }
-
-            &:nth-child(3)::before {
-                width: 18px;
-                height: 19px;
-                top: 0;
-            }
-        }
-
-        &__link {
-            font-size: 18px;
         }
     }
 }
