--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -157,7 +157,7 @@
     }
 }
 
-/* ---------------------------------- @media header ---------------------------------- */
+/* ---------------------------------- @media header */
 
 @media (max-width: 1230px) {
     body.lock {
@@ -229,7 +229,7 @@
         }
 
         &__menu {
-            margin: 0 0 30px 0;
+            margin: 0 0 60px 0;
         }
 
         &__info {
@@ -259,6 +259,30 @@
             &:not(:last-child) {
                 margin: 0 0 30px 0;
             }
+        }
+    }
+    .contacts {
+        &__list {
+            flex-direction: column;
+        }
+
+        &__item {
+            &:nth-child(1) {
+                margin: 0 0 20px 0;
+            }
+
+            &:not(:last-child) {
+                margin: 0 0 20px 0;
+            }
+
+            &:nth-child(3)::before {
+                top: auto;
+            }
+        }
+
+        &__link--phone {
+            font-weight: 600;
+            font-size: 18px;
         }
     }
 }
