--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -19,7 +19,7 @@
     }
 
     &__info {
-        padding: 40px 0 30px 0;
+        padding: 40px 30px 30px 0;
     }
 
     &__title {
@@ -112,7 +112,17 @@
     }
 
     &__image {
+        flex: 0 0 517px;
+        position: relative;
+        min-height: 480px;
+
         img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            position: absolute;
+            top: 0;
+            left: 0;
         }
     }
 }
@@ -121,6 +131,43 @@
 
 @media (max-width: 1230px) {
     .banner {
-        //padding: 80px 0 0 0;
+        padding: 60px 0 0 0;
+    }
+}
+
+@media (max-width: 1050px) {
+    .banner {
+        position: relative;
+
+        &::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: #00093c;
+            opacity: .85;
+            z-index: 2;
+        }
+
+        &__body {
+            flex-direction: column;
+        }
+
+        &__info {
+            position: relative;
+            z-index: 10;
+        }
+
+        &__image {
+            position: static;
+            min-height: auto;
+            flex: 0 1 auto;
+
+            img {
+                object-position: bottom;
+            }
+        }
     }
 }
