--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -158,6 +158,7 @@
         &__info {
             position: relative;
             z-index: 10;
+            padding: 40px 0 30px 0;
         }
 
         &__image {
@@ -168,6 +169,14 @@
             img {
                 object-position: bottom;
             }
+        }
+    }
+}
+
+@media (max-width: 425px) {
+    .banner {
+        &__btn {
+            width: 100%;
         }
     }
 }
