--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -44,7 +44,7 @@
     }
 
     &__duration {
-        margin: 0 32px 0 0;
+        margin: 0 33px 0 0;
 
         &::before {
             content: '';
@@ -99,6 +99,7 @@
 
     &__btn {
         font-weight: 700;
+        font-size: 14px;
         line-height: 26px;
         padding: 12px 20px;
         background: #f7941d;
@@ -124,6 +125,33 @@
             top: 0;
             left: 0;
         }
+    }
+
+    &__item--1 {
+        width: 100px;
+        height: 100px;
+        background: url("../img/section-banner/svg/cross.svg") 0 0 no-repeat;
+        position: absolute;
+        top: 161px;
+        right: 62px;
+    }
+
+    &__item--2 {
+        width: 128px;
+        height: 128px;
+        background: url("../img/section-banner/svg/circle.svg") 0 0 no-repeat;
+        position: absolute;
+        bottom: 42px;
+        left: 37px;
+    }
+
+    &__item--3 {
+        width: 98.39px;
+        height: 81.73px;
+        background: url("../img/section-banner/svg/triangle-1.svg") 0 0 no-repeat;
+        position: absolute;
+        top: 24px;
+        left: 119px;
     }
 }
 
