--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -13,6 +13,30 @@
     background: #00093c;
     color: #fff;
 
+    &__container {
+        position: relative;
+
+        &::after {
+            content: '';
+            width: 99px;
+            height: 124px;
+            background: url("../img/section-banner/svg/horse.svg") 0 0 no-repeat;
+            position: absolute;
+            top: 35px;
+            left: -109px;
+        }
+
+        &::before {
+            content: '';
+            width: 129px;
+            height: 268px;
+            background: url("../img/section-banner/svg/curve-1.svg") 0 0 no-repeat;
+            position: absolute;
+            bottom: -51px;
+            left: -227px;
+        }
+    }
+
     &__body {
         display: flex;
         justify-content: space-between;
@@ -101,7 +125,7 @@
         font-weight: 700;
         font-size: 14px;
         line-height: 26px;
-        padding: 12px 20px;
+        padding: 12px 21px;
         background: #f7941d;
         border-radius: 6px;
         color: #fff;
@@ -146,12 +170,48 @@
     }
 
     &__item--3 {
-        width: 98.39px;
-        height: 81.73px;
+        width: 99px;
+        height: 82px;
         background: url("../img/section-banner/svg/triangle-1.svg") 0 0 no-repeat;
         position: absolute;
         top: 24px;
         left: 119px;
+    }
+
+    &__item--4 {
+        width: 401px;
+        height: 93px;
+        background: url("../img/section-banner/svg/curve-2.svg") 0 0 no-repeat;
+        position: absolute;
+        top: 179px;
+        left: -243px;
+    }
+
+    &__item--5 {
+        width: 341px;
+        height: 133px;
+        background: url("../img/section-banner/svg/curve-3.svg") 0 0 no-repeat;
+        position: absolute;
+        bottom: -42px;
+        left: -388px;
+    }
+
+    &__item--6 {
+        width: 340px;
+        height: 133px;
+        background: url("../img/section-banner/svg/curve-4.svg") 0 0 no-repeat;
+        position: absolute;
+        bottom: -33px;
+        right: -286px;
+    }
+
+    &__item--7 {
+        width: 138px;
+        height: 115px;
+        background: url("../img/section-banner/svg/triangle-2.svg") 0 0 no-repeat;
+        position: absolute;
+        top: 45px;
+        right: -248px;
     }
 }
 
