--- a/src/scss/section-targets.scss
+++ b/src/scss/section-targets.scss
@@ -12,6 +12,7 @@
 
     &__item {
         padding: 0 10px;
+        position: relative;
 
         &_1 {
             flex: 1 1 auto;
@@ -27,7 +28,7 @@
                 height: 41px;
                 display: block;
                 position: absolute;
-                bottom: 82px;
+                top: 3px;
             }
         }
 
@@ -41,7 +42,7 @@
                 height: 46px;
                 display: block;
                 position: absolute;
-                bottom: 82px;
+                top: -2px;
             }
         }
 
@@ -55,7 +56,7 @@
                 height: 49px;
                 display: block;
                 position: absolute;
-                bottom: 82px;
+                top: -5px;
             }
         }
 
@@ -69,7 +70,7 @@
                 height: 43px;
                 display: block;
                 position: absolute;
-                bottom: 82px;
+                top: 1px;
             }
         }
     }
