Продолжаю верстку section targets 121022_16:26

--- a/src/scss/section-targets.scss
+++ b/src/scss/section-targets.scss
@@ -7,7 +7,7 @@
 
     &__body {
         display: flex;
-        margin: 0 -10px;
+        margin: 0 -10px 142px -10px;
     }
 
     &__item {
@@ -16,7 +16,6 @@
 
         &_1 {
             flex: 1 1 auto;
-            position: relative;
             margin-top: -8px;
 
             &::before {
@@ -116,5 +115,83 @@
 
     &__desc {
         line-height: 17px;
+    }
+}
+
+/* ---------------------------------- @media section targets */
+
+@media (max-width: 1300px) {
+    .targets {
+        &__body {
+            position: relative;
+            padding-top: 100px;
+            flex-wrap: wrap;
+            margin-left: 240px;
+        }
+
+        &__item {
+            &_1 {
+                position: absolute;
+                top: -50px;
+                left: -240px;
+                margin-left: 42px;
+            }
+
+            &_2 {
+                flex: 0 1 50%;
+            }
+
+            &_3 {
+                flex: 0 1 50%;
+            }
+
+            &_4 {
+                flex: 0 1 50%;
+                margin-top: 30px;
+            }
+
+            &_5 {
+                flex: 0 1 50%;
+                margin-top: 30px;
+            }
+        }
+    }
+}
+
+@media (max-width: 768px) {
+    .targets {
+        &__body {
+            flex-direction: column;
+        }
+
+        &__item {
+            &_3 {
+                margin-top: 30px;
+            }
+        }
+    }
+}
+
+@media (max-width: 576px) {
+    .targets {
+        &__item {
+            &_1 {
+                margin-left: 27px;
+
+                &::before {
+                    scale: .8;
+                }
+
+                &::after {
+                    scale: .8;
+                    left: -46px;
+                }
+            }
+        }
+
+        &__message {
+            font-size: 14px;
+            max-width: 270px;
+        }
     }
 }
