--- a/src/scss/section-targets.scss
+++ b/src/scss/section-targets.scss
@@ -116,6 +116,67 @@
     &__desc {
         line-height: 17px;
     }
+
+    /* ---------------------------------- video */
+
+    &__video {
+        margin: 0 auto;
+        position: relative;
+    }
+
+    .video {
+        position: relative;
+        aspect-ratio: 16 / 9;
+        max-width: 780px;
+        //height: auto;
+        //border-radius: 20px;
+        //overflow: hidden;
+        &__file {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+        }
+
+        &__item {
+            &--1 {
+                width: 281px;
+                height: 132px;
+                background: url("../img/section-targets/svg/curve-left.svg") 0 0 no-repeat;
+                position: absolute;
+                bottom: 23px;
+                left: -266px;
+            }
+
+            &--2 {
+                width: 165px;
+                height: 137px;
+                background: url("../img/section-targets/svg/triangle.svg") 0 0 no-repeat;
+                position: absolute;
+                top: -68px;
+                left: -96px;
+            }
+
+            &--3 {
+                width: 352px;
+                height: 351px;
+                background: url("../img/section-targets/svg/curve-right.svg") 0 0 no-repeat;
+                position: absolute;
+                top: -58px;
+                right: -245px;
+            }
+
+            &--4 {
+                width: 230px;
+                height: 230px;
+                background: url("../img/section-targets/svg/cross.svg") 0 0 no-repeat;
+                position: absolute;
+                bottom: -81px;
+                right: -144px;
+            }
+        }
+    }
 }
 
 /* ---------------------------------- @media section targets */
