Делаю вставку видео 171022_12:11

--- a/src/scss/section-targets.scss
+++ b/src/scss/section-targets.scss
@@ -125,12 +125,15 @@
     }
 
     .video {
-        position: relative;
-        aspect-ratio: 16 / 9;
         max-width: 780px;
-        //height: auto;
-        //border-radius: 20px;
-        //overflow: hidden;
+
+        &__body {
+            position: relative;
+            aspect-ratio: 16 / 9;
+            border-radius: 20px;
+            overflow: hidden;
+        }
+
         &__file {
             position: absolute;
             top: 0;
