Делаю вставку видео 171022_12:50

--- a/src/scss/section-targets.scss
+++ b/src/scss/section-targets.scss
@@ -129,12 +129,14 @@
 
         &__body {
             position: relative;
-            aspect-ratio: 16 / 9;
+            padding-bottom: 56%;
             border-radius: 20px;
             overflow: hidden;
+            z-index: 2;
         }
 
         &__file {
+            object-fit: cover;
             position: absolute;
             top: 0;
             left: 0;
