--- a/src/scss/section-targets.scss
+++ b/src/scss/section-targets.scss
@@ -133,15 +133,15 @@
             border-radius: 20px;
             overflow: hidden;
             z-index: 2;
-        }
 
-        &__file {
-            object-fit: cover;
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
+            video, iframe {
+                object-fit: cover;
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+            }
         }
 
         &__item {
