--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -1,3 +1,15 @@
+$maxWidth: 1180;
+@mixin adaptiv-font($pcSize, $mobSize) {
+    $addSize: $pcSize - $mobSize;
+    $addMobSize: $addSize + $addSize * 0.7;
+    @media (max-width: 767px) {
+        font-size: calc(#{$mobSize + px} + #{$addMobSize} * ((100vw - 320px) / #{$maxWidth}));
+    }
+    @media (min-width: 767px) {
+        font-size: calc(#{$mobSize + px} + #{$addSize} * (100vw / #{$maxWidth}));
+    }
+}
+
 .header {
     position: fixed;
     width: 100%;
@@ -151,7 +163,7 @@
         }
 
         &--phone {
-            font-size: 16px;
+            @include adaptiv-font(16, 16);
             color: #00093c;
         }
     }
@@ -282,7 +294,7 @@
 
         &__link--phone {
             font-weight: 600;
-            font-size: 18px;
+            @include adaptiv-font(18, 18);
         }
     }
 }
