--- a/src/scss/section-targets.scss
+++ b/src/scss/section-targets.scss
@@ -1,3 +1,15 @@
+$maxWidth: 1180;
+@mixin adaptiv-font($pcSize, $mobSize) {
+    $addSize: $pcSize - $mobSize;
+    $addMobSize: $addSize + $addSize * 0.7;
+    @media (max-width: 767px) {
+        font-size: calc(#{$mobSize + px} + #{$addMobSize} * ((100vw - 320px) / #{$maxWidth}));
+    }
+    @media (min-width: 767px) {
+        font-size: calc(#{$mobSize + px} + #{$addSize} * (100vw / #{$maxWidth}));
+    }
+}
+
 .targets {
     background: #f6f7f9;
     padding: 107px 0 70px 0;
@@ -97,8 +109,8 @@
 
     &__message {
         font-weight: 500;
-        font-size: 16px;
-        line-height: 20px;
+        @include adaptiv-font(16, 16);
+        line-height: 125%;
         max-width: 310px;
         position: absolute;
         top: 32px;
@@ -107,21 +119,20 @@
 
     &__title {
         font-weight: 700;
-        font-size: 24px;
-        line-height: 29px;
+        @include adaptiv-font(24, 24);
+        line-height: 120.83%;
         margin: 0 0 14px 0;
         padding: 60px 0 0 0;
     }
 
     &__desc {
-        line-height: 17px;
+        line-height: 121.43%;
     }
-
-    /* ---------------------------------- video */
 
     &__video {
         margin: 0 auto;
         position: relative;
+        padding-bottom: 68px;
     }
 
     .video {
@@ -150,7 +161,7 @@
                 height: 132px;
                 background: url("../img/section-targets/svg/curve-left.svg") 0 0 no-repeat;
                 position: absolute;
-                bottom: 23px;
+                bottom: 91px;
                 left: -266px;
             }
 
@@ -177,10 +188,29 @@
                 height: 230px;
                 background: url("../img/section-targets/svg/cross.svg") 0 0 no-repeat;
                 position: absolute;
-                bottom: -81px;
+                bottom: -13px;
                 right: -144px;
             }
         }
+    }
+
+    &__main-title {
+        margin-bottom: 25px;
+    }
+
+    .title-section {
+        font-weight: 700;
+        @include adaptiv-font(36, 24);
+        line-height: 94.44%;
+    }
+
+    &__main-desc {
+        max-width: 979px;
+    }
+
+    .desc-section {
+        @include adaptiv-font(18, 14);
+        line-height: 144.44%;
     }
 }
 
@@ -263,7 +293,7 @@
         }
 
         &__message {
-            font-size: 14px;
+            @include adaptiv-font(14, 14);
             max-width: 270px;
             padding-left: 35px;
         }
