--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -24,6 +24,19 @@ body {
     min-height: 100%;
 }
 
+//$height: 48px;
+$maxWidth: 1180;
+@mixin adaptiv-font($pcSize, $mobSize) {
+    $addSize: $pcSize - $mobSize;
+    $addMobSize: $addSize + $addSize * 0.7;
+    @media (max-width: 767px) {
+        font-size: calc(#{$mobSize + px} + #{$addMobSize} * ((100vw - 320px) / #{$maxWidth}));
+    }
+    @media (min-width: 767px) {
+        font-size: calc(#{$mobSize + px} + #{$addSize} * (100vw / #{$maxWidth}));
+    }
+}
+
 [class*="__container"] {
     max-width: 1180px;
     margin: 0 auto;
