--- a/src/scss/section-targets.scss
+++ b/src/scss/section-targets.scss
@@ -209,11 +209,13 @@
 
     .benefits {
         display: flex;
+        flex-wrap: wrap;
 
         &__item {
             line-height: 142.86%;
             padding: 50px 10px 0 10px;
             position: relative;
+            flex: 0 1 16.666%;
 
             &::before {
                 position: absolute;
@@ -325,6 +327,20 @@
     }
 }
 
+@media (max-width: 1138px) {
+    .targets {
+        .benefits {
+            &__item {
+                flex: 0 1 33.333%;
+
+                &:nth-child(-n+3) {
+                    margin-bottom: 30px;
+                }
+            }
+        }
+    }
+}
+
 @media (max-width: 768px) {
     .targets {
         &__listing {
@@ -334,6 +350,20 @@
         &__item {
             &_3 {
                 margin-top: 30px;
+            }
+        }
+
+        .benefits {
+            &__item {
+                flex: 0 1 50%;
+
+                &:nth-child(-n+3) {
+                    margin-bottom: 0;
+                }
+
+                &:nth-child(-n+4) {
+                    margin-bottom: 30px;
+                }
             }
         }
     }
@@ -381,6 +411,24 @@
 
             &_1 {
                 margin-left: 227px;
+            }
+        }
+
+        .benefits {
+            &__item {
+                flex: 0 1 100%;
+
+                &:nth-child(-n+3) {
+                    margin-bottom: 0;
+                }
+
+                &:nth-child(-n+4) {
+                    margin-bottom: 0;
+                }
+
+                &:not(:last-child) {
+                    margin-bottom: 30px;
+                }
             }
         }
     }
