--- a/src/scss/section-features.scss
+++ b/src/scss/section-features.scss
@@ -6,7 +6,6 @@
 
     &__body {
         display: flex;
-        flex-wrap: wrap;
     }
 
     &__item {
@@ -24,15 +23,11 @@
             flex: 0 1 50%;
             max-width: 481px;
         }
-
-        &:nth-child(3) {
-            flex: 0 1 100%;
-            display: flex;
-            justify-content: center;
-        }
     }
 
-    &__button {
+    &__action {
+        display: flex;
+        justify-content: center;
         margin-top: 41px;
     }
 }
