--- a/src/scss/section-features.scss
+++ b/src/scss/section-features.scss
@@ -9,19 +9,17 @@
     }
 
     &__item {
-        @include adaptiv-font(18, 18);
+        @include adaptiv-font(18, 14);
         line-height: 144.44%;
         color: #fff;
 
         &:nth-child(1) {
             flex: 0 1 50%;
-            max-width: 486px;
             margin-right: 114px;
         }
 
         &:nth-child(2) {
             flex: 0 1 50%;
-            max-width: 481px;
         }
     }
 
@@ -29,5 +27,21 @@
         display: flex;
         justify-content: center;
         margin-top: 41px;
+    }
+}
+
+@media (max-width: 768px) {
+    .features {
+        padding: 50px 0;
+
+        &__body {
+            flex-direction: column;
+        }
+
+        &__item {
+            &:nth-child(1) {
+                margin: 0 0 30px 0;
+            }
+        }
     }
 }
