--- a/src/scss/section-features.scss
+++ b/src/scss/section-features.scss
@@ -3,6 +3,16 @@
 .features {
     background: #00093c;
     padding: 91px 0 50px 0;
+    position: relative;
+
+    &__sqr {
+        background: url("../img/section-features/elem.svg") repeat-x;
+        width: 100%;
+        height: 10px;
+        position: absolute;
+        top: 0;
+        left: 0;
+    }
 
     &__body {
         display: flex;
