--- a/src/scss/section-banner.scss
+++ b/src/scss/section-banner.scss
@@ -52,14 +52,14 @@
         margin: 0 0 28px 0;
     }
 
-    &__conditions {
+    /*&__conditions {
         font-weight: 500;
         line-height: 121.43%;
         display: flex;
         margin: 0 0 32px 0;
-    }
+    }*/
 
-    &__duration {
+    /*&__duration {
         margin: 0 33px 0 0;
 
         &::before {
@@ -81,9 +81,9 @@
             display: block;
             margin: 0 0 7px 0;
         }
-    }
+    }*/
 
-    &__cost {
+    /*&__cost {
         font-weight: 700;
         @include adaptiv-font(28, 28);
         line-height: 121.43%;
@@ -98,7 +98,7 @@
             display: block;
             margin: 0 0 7px 0;
         }
-    }
+    }*/
 
     &__bonus {
         font-weight: 700;
@@ -204,6 +204,54 @@
         position: absolute;
         top: 45px;
         right: -248px;
+    }
+}
+
+.conditions {
+    font-weight: 500;
+    line-height: 121.43%;
+    display: flex;
+    margin: 0 0 32px 0;
+
+    &__duration {
+        margin: 0 33px 0 0;
+
+        &::before {
+            content: '';
+            width: 100%;
+            height: 2px;
+            background: linear-gradient(0.25turn, #f7941d, #27aae1);
+            display: block;
+            margin: 0 0 7px 0;
+        }
+    }
+
+    &__mode {
+        &::before {
+            content: '';
+            width: 100%;
+            height: 2px;
+            background: linear-gradient(0.25turn, #f7941d, #27aae1);
+            display: block;
+            margin: 0 0 7px 0;
+        }
+    }
+}
+
+.cost {
+    font-weight: 700;
+    @include adaptiv-font(28, 28);
+    line-height: 121.43%;
+    margin: 0 0 33px 0;
+    display: flex;
+
+    span::before {
+        content: '';
+        width: 100%;
+        height: 2px;
+        background: linear-gradient(0.25turn, #f7941d, #27aae1);
+        display: block;
+        margin: 0 0 7px 0;
     }
 }
 
