Начинаю делать slider 201022_13:17

--- a/src/scss/section-content.scss
+++ b/src/scss/section-content.scss
@@ -16,9 +16,18 @@
         margin-bottom: 25px;
     }
 
-    &__row {}
+    /* --------------------- slider swiper ↓ --------------------- */
 
-    &__info {}
 
-    &__image {}
+
+    /* --------------------- slider swiper ↑ --------------------- */
+
+    &__row {
+    }
+
+    &__info {
+    }
+
+    &__image {
+    }
 }
