Продолжаю делать slider 201022_13:24

--- a/src/scss/section-content.scss
+++ b/src/scss/section-content.scss
@@ -18,7 +18,17 @@
 
     /* --------------------- slider swiper ↓ --------------------- */
 
-
+    &__slider {}
+    // Главный контейнер слайдера
+    .image-slider {
+        // Обязательная оболочка
+        &__wrapper {}
+        // Слайды
+        &__slide {}
+        &__image {
+            img {}
+        }
+    }
 
     /* --------------------- slider swiper ↑ --------------------- */
 
