Продолжаю делать slider 201022_15:48

--- a/src/scss/section-content.scss
+++ b/src/scss/section-content.scss
@@ -23,6 +23,16 @@
             width: 600px;
             height: 300px;
         }
+        .image-slider {
+            &__wrapper {}
+            &__slide {}
+            &__image {
+                text-align: center;
+                img {
+                    max-width: 100%;
+                }
+            }
+        }
     }
 
     /* --------------------- slider swiper ↑ --------------------- */
