Начинаю заново делать slider 211022_13:31

--- a/src/scss/section-content.scss
+++ b/src/scss/section-content.scss
@@ -18,7 +18,15 @@
 
     /* --------------------- slider swiper ↓ --------------------- */
 
-
+    &__slider {
+        .slider {
+            &__wrapper {}
+            &__slide {}
+            &__image {
+                img {}
+            }
+        }
+    }
 
     /* --------------------- slider swiper ↑ --------------------- */
 
