--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -5,6 +5,7 @@
 @import "section-targets";
 @import "section-features";
 @import "section-content";
+@import "section-educator";
 @import "footer";
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap');
 
