Закончил section educator 291022_19:39

--- a/src/scss/section-educator.scss
+++ b/src/scss/section-educator.scss
@@ -138,6 +138,44 @@ $dot-space: 20px;
             font-weight: 500;
             line-height: 142.86%;
             color: #4f4f4f;
+            text-align: center;
+        }
+    }
+}
+
+@media (max-width: 1024px) {
+    .educator {
+        &__items {
+            flex-wrap: wrap;
+        }
+
+        &__column {
+            flex: 0 1 50%;
+
+            &:nth-child(-n+2) {
+                margin-bottom: 20px;
+            }
+        }
+    }
+}
+
+@media (max-width: 590px) {
+    .educator {
+        &__column {
+            flex: 1 1 auto;
+
+            &:nth-child(-n+3) {
+                margin-bottom: 20px;
+            }
+        }
+    }
+}
+
+@media (max-width: 432px) {
+    .educator {
+        &__title {
+            position: relative;
+            z-index: 1;
         }
     }
 }
