Начал делать форму 041122_17:24

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -7,6 +7,7 @@
 @import "section-content";
 @import "section-educator";
 @import "section-faq";
+@import "section-form";
 @import "footer";
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap');
 
