--- a/src/scss/section-faq.scss
+++ b/src/scss/section-faq.scss
@@ -2,7 +2,7 @@
 
 .faq {
     background: #f6f7f9;
-    padding: 66px 0 331px 0;
+    padding: 66px 0 101px 0;
 
     &__title {
         font-weight: 700;
@@ -16,9 +16,12 @@
     }
 
     &__item {
-        margin-bottom: 20px;
         position: relative;
         z-index: 1;
+
+        &:not(:nth-child(4)) {
+            margin-bottom: 20px;
+        }
     }
 
     &__content {
@@ -71,12 +74,6 @@
     }
 
     &__gradient {
-        width: 100%;
-        height: 100%;
-        background: linear-gradient(90deg, #f7941d 0%, #27aae1 100%);
-        opacity: 0.3;
-        filter: blur(5px);
-        border-radius: 6px;
         position: absolute;
         top: 0;
         left: 0;
@@ -108,5 +105,14 @@
             top: 240px;
             right: -111px;
         }
+    }
+
+    .gradient {
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(90deg, #f7941d 0%, #27aae1 100%);
+        opacity: 0.3;
+        filter: blur(5px);
+        border-radius: 6px;
     }
 }
